Coverity analysis defect 174581: Uninitialized scalar field

XMLWordPrintableJSON

    • Query Optimization
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/58e221f6910c414f2794c3d97c4fb8a1/bazel_cache/b26a070346a7e7a0a75aadbf03a9644f/execroot/_main/src/mongo/db/query/find_common.h:173: UNINIT_CTOR 174581 Class member declaration for "objSize".
      /data/mci/58e221f6910c414f2794c3d97c4fb8a1/bazel_cache/b26a070346a7e7a0a75aadbf03a9644f/execroot/_main/src/mongo/db/query/find_common.h:136: UNINIT_CTOR 174581 Non-static class member "objSize" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Hana Pearlman
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: