SERVER-104917: Initialize objSize member of BSONObjCursorAppender class (#36538)

GitOrigin-RevId: 190609aa47ac86849b01b23c251c0a4436468d90